# Living-Codebase

./: .clangd  Cargo.toml  Makefile  README.md  patch_engine.py
benchmark/: full_demo.py  mttr_comparison.py
daemon/: Cargo.toml
daemon/src/: ebpf_consumer.rs  injector.rs  main.rs  mock_host.rs
dashboard/: index.html
ebpf/: .clangd  fault_detector.bpf.c  fault_detector.h
ebpf/mock_headers/bpf/: bpf_helpers.h  bpf_tracing.h
ebpf/mock_headers/linux/: bpf.h
healing/: baseline_generator.py  mutator.py  patch_engine.py  test_uaf_sim.py  test_z3.py
hotswap/: patch_injector.c  test_target.c
src/: main.rs
