[package]
name = "healing_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# System integrations
libc = "0.2.153"
nix = { version = "0.27.1", features = ["process", "signal", "ptrace", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Target-specific eBPF integration (only compiled on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.21.0"
